boinc (7.6.31+dfsg-6exp2) experimental; urgency=medium

  * Corrected compiler flag management for link time optimisation,
    binaries and libraries  lost considerable weight (85%-95%)
  * Better consistency for compiler flags when building wrapper apps
    and sample scientific applications.
  * Example apps are now truly static.

 -- Steffen Moeller <moeller@debian.org>  Sun, 24 Apr 2016 12:45:27 +0200

boinc (7.6.31+dfsg-6exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Apr 2016 12:38:17 +0200

boinc (7.6.31+dfsg-6) unstable; urgency=medium

  * Upload to unstable
  [ Lorenzo Mastrogiacomi ]
  * Make cc_config.xml configurable from users
    members of boinc group (Closes: #818789).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Apr 2016 12:36:30 +0200

boinc (7.6.31+dfsg-5exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 05 Apr 2016 10:46:14 +0200

boinc (7.6.31+dfsg-5) unstable; urgency=medium

  * Upload to unstable.
  [ Christian Beer ]
  * debian/patches/dcd9eb3c2ec1f729b12983bf5ee6395565871a22.patch:
    fix nvidia GPU detection (Closes: #819990)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 05 Apr 2016 10:44:47 +0200

boinc (7.6.31+dfsg-4exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 01 Apr 2016 11:47:42 +0200

boinc (7.6.31+dfsg-4) unstable; urgency=medium

  * Upload to unstable.
  [ Graham Inggs ]
  * do not build cuda package on ppc64el, libcuda1 is not
    available there.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 01 Apr 2016 11:44:46 +0200

boinc (7.6.31+dfsg-3exp1) experimental; urgency=medium
