@@ -327,42 +327,6 @@ Package: boinc
 % The package also features the wrapper application, which is likely
 % to find its audience also in real projects.
 %
-@Package: boinc-dbg
-@Section: debug
-@Priority: extra
-@Architecture: any
-@Depends: boinc-client (= ${binary:Version}) | boinc-manager (= ${binary:Version}),
-@         ${misc:Depends}
-@Suggests: libcurl3-dbg, libssl1.0.0-dbg, libwxgtk3.0-0-dbg,
-%         boinc-server-dbg
-@Description: debugging symbols for BOINC binaries
-@ The Berkeley Open Infrastructure for Network Computing (BOINC) is a
-@ software platform for distributed computing using volunteered computer
-@ resources.
-@ .
-@ This package contains unstripped versions of all binaries included in
-@ the BOINC client packages. It is provided primarily to provide a backtrace
-@ with names in a debugger, this makes it somewhat easier to interpret
-@ core dumps. For installations running a BOINC server locally, it may
-@ be of interest to also install the boinc-server-dbg package.
-@
-%Package: boinc-server-dbg
-%Section: debug
-%Priority: extra
-%Architecture: any
-%Depends: boinc-server-maker (= ${binary:Version}) | boinc-app-examples (= ${binary:Version}) | boinc-cgi-stripchart (= ${binary:Version}),
-%         ${misc:Depends}
-%Suggests: libcurl3-dbg, libssl1.0.0-dbg, libwxgtk3.0-0-dbg
-%Description: debugging symbols for BOINC server binaries
-% The Berkeley Open Infrastructure for Network Computing (BOINC) is a
-% software platform for distributed computing using volunteered computer
-% resources.
-% .
-% This package contains unstripped versions of all binaries included in
-% the BOINC packages. It is provided primarily to provide a backtrace
-% with names in a debugger, this makes it somewhat easier to interpret
-% core dumps.
-%
 %Package: boinc-cgi-stripchart
 %Section: libs
 %Priority: extra
